[package]
name = "socache"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
reqwest = { version = "0.13.4", features = ["json"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
moka = { version = "0.12.15", features = ["future"]}
blake3 = "1.8.5"
