[package]
name = "socache"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version="0.8.9", features=["ws"]}
reqwest = { version = "0.13.4", features = ["json"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
moka = { version = "0.12.15", features = ["future"]}
blake3 = "1.8.5"
tokio-tungstenite = {version="0.29.0", features=["native-tls"]}
uuid = {version = "1.23.3", features = ["v4"]}
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
rand = "0.10.1"
portable-atomic = "1.13.1"

